[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Jonathan Seery <seery.jonathan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.11.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
